--- a/folder/Issue_relative_path_obs.ipynb
+++ b/folder/Issue_relative_path_obs.ipynb
@@ -225,7 +225,7 @@
     "#gwf.remove_package(\"OBS\")\n",
     "chd.obs.initialize(\n",
     "    pname=\"obs\",\n",
-    "    filename=\"test.ghb.obs\",\n",
+    "    filename=\"test.chd.obs\",\n",
     "    digits=9, \n",
     "    print_input=True,\n",
     "    continuous= chd_obs,\n",
