--- a/folder/Issue_relative_path_obs.ipynb
+++ b/folder/Issue_relative_path_obs.ipynb
@@ -214,11 +214,11 @@
     "\n",
     "chd_obs = {\n",
     "    (os.path.join(obs_ws,'chd_obs_binary.csv'), \"binary\"): [\n",
-    "        ('chd-(0, 5, 5)', \"CHD\", (0, 5,5)),\n",
+    "        ("chd-(0, 5, 5)", \"CHD\", (0, 5,5)),\n",
     "       \n",
     "    ],\n",
     "    os.path.join(obs_ws,'chdws.csv'): [\n",
-    "        ('chd-(0, 5, 5)', \"CHD\", (0, 5,5)),\n",
+    "        ("chd-(0, 5, 5)", \"CHD\", (0, 5,5)),\n",
     "    ],\n",
     "}\n",
     "# initialize obs package\n",
